Task2/nat.tf
#resource "aws_nat_gateway" "nat" {
#
#  allocation_id = aws_eip.nat.id
#  subnet_id     = aws_subnet.public[0].id
#
#  tags = {
#    Name        = "nat-gateway"
#    Terraform   = "true"
#    Environment = "rsschool"
#  }
#  depends_on = [aws_internet_gateway.igw]
#}
